connecting chrome extension to server

--- a/src/popup.html
+++ b/src/popup.html
@@ -34,8 +34,11 @@
      <!--
       Render react app in the visited website when the .start button is clicked.
      -->
-      <button class="start">
-        Render App
+      <button id="duplicate">
+        Remove Duplicate
+      </button>
+      <button id="keypoint">
+        Generate Key Points
       </button>
     </div>
   </body>
