rendering data to active tab

--- a/src/popup.html
+++ b/src/popup.html
@@ -34,11 +34,8 @@
      <!--
       Render react app in the visited website when the .start button is clicked.
      -->
-      <button id="duplicate">
-        Remove Duplicate
-      </button>
-      <button id="keypoint">
-        Generate Key Points
+      <button id="launch-btn">
+        Launch KeyPoint
       </button>
     </div>
   </body>
